<resources>
    <string name="app_name">TrueChoice</string>
    <string name="action_settings">Settings</string>
    <string name="number">number</string>
    <string name="rate_us">Rate us</string>
    <string name="exit">Exit</string>
    <string name="True_choice">TrueChoice</string>
    <string name="title_activity_number">Number</string>
    <string name="title_activity_objet">Objet</string>
    <string name="objet">Objet</string>
    <string name="niveau1">Niveau1</string>
    <string name="niveau2">Niveau2</string>
    <string name="niveau3">Niveau3</string>
    <string name="niveau4">Niveau4</string>
    <string name="niveau5">Niveau5</string>
    <string name="niveau6">Niveau6</string>
    <string name="niveau7">Niveau7</string>
    <string name="niveau8">Niveau8</string>
    <string name="niveau9">Niveau9</string>
    <string name="title_activity_niveau">Niveau</string>
    <string name="tv1">tv1</string>
    <string name="tv2">tv2</string>
    <string name="tv3">tv3</string>
    <string name="tv4">tv4</string>
    <string name="tv5">tv5</string>
    <string name="tv6">tv6</string>
    <string-array name="N1S1">
        <item>2 v</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
   </string-array>
    <string-array name="N1S2">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>5 v</item>
        <item>3</item>
    </string-array>
    <string-array name="N1S3">
        <item>12</item>
        <item>12</item>
        <item>12</item>
        <item>12</item>
        <item>12</item>
        <item>13 v</item>
    </string-array>
    <string-array name="N1S4">
        <item>77</item>
        <item>77</item>
        <item>77</item>
        <item>77</item>
        <item>11 v</item>
        <item>77</item>
    </string-array>
    <string-array name="N1S5">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>1 v</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="N1S6">
        <item>7 v</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </string-array>
    <string-array name="N1S7">
        <item>4</item>
        <item>4</item>
        <item>2 v</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
    </string-array>
    <string-array name="N1S8">
        <item>11</item>
        <item>11</item>
        <item>17 v</item>
        <item>11</item>
        <item>11</item>
        <item>11</item>
    </string-array>
    <string-array name="N1S9">
        <item>100</item>
        <item>101 v</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
    </string-array>
    <string-array name="N1S10">
        <item>333</item>
        <item>333</item>
        <item>333</item>
        <item>333</item>
        <item>333</item>
        <item>353 v</item>
    </string-array>
    <string-array name="N1S11">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N1S12">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N2S1">
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>1 v</item>
        <item>2</item>
        <item>2</item>
    </string-array>
    <string-array name="N2S2">
        <item>6</item>
        <item>3 v</item>
        <item>4</item>
        <item>8</item>
        <item>4</item>
        <item>8</item>
    </string-array>
    <string-array name="N2S3">
        <item>12</item>
        <item>14</item>
        <item>12</item>
        <item>12</item>
        <item>11 v</item>
        <item>16</item>
    </string-array>
    <string-array name="N2S4">
        <item>70</item>
        <item>77 v</item>
        <item>78</item>
        <item>76</item>
        <item>14</item>
        <item>72</item>
    </string-array>
    <string-array name="N2S5">
        <item>22</item>
        <item>44</item>
        <item>33 v</item>
        <item>66</item>
        <item>88</item>
        <item>44</item>
    </string-array>
    <string-array name="N2S6">
        <item>212</item>
        <item>434</item>
        <item>343 v</item>
        <item>454</item>
        <item>656</item>
        <item>878</item>
    </string-array>
    <string-array name="N2S7">
        <item>124</item>
        <item>986</item>
        <item>564</item>
        <item>652</item>
        <item>670</item>
        <item>461 v</item>
    </string-array>
    <string-array name="N2S8">
        <item>82</item>
        <item>86</item>
        <item>58</item>
        <item>87 v</item>
        <item>84</item>
        <item>80</item>
    </string-array>
    <string-array name="N2S9">
        <item>100</item>
        <item>110</item>
        <item>100</item>
        <item>101 v</item>
        <item>010</item>
        <item>102</item>
    </string-array>
    <string-array name="N2S10">
        <item>3454</item>
        <item>7606</item>
        <item>5452</item>
        <item>4798</item>
        <item>9743 v</item>
        <item>3574</item>
    </string-array>
    <string-array name="N2S11">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N2S12">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N3S1">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2 v</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string-array name="N3S2">
        <item>5</item>
        <item>4 v</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </string-array>
    <string-array name="N3S3">
        <item>15</item>
        <item>17</item>
        <item>17</item>
        <item>19</item>
        <item>14 v</item>
        <item>11</item>
    </string-array>
    <string-array name="N3S4">
        <item>71</item>
        <item>74 v</item>
        <item>75</item>
        <item>77</item>
        <item>19</item>
        <item>73</item>
    </string-array>
    <string-array name="N3S5">
        <item>21</item>
        <item>43</item>
        <item>38 v</item>
        <item>65</item>
        <item>87</item>
        <item>43</item>
    </string-array>
    <string-array name="N3S6">
        <item>211</item>
        <item>433</item>
        <item>346 v</item>
        <item>459</item>
        <item>657</item>
        <item>875</item>
    </string-array>
    <string-array name="N3S7">
        <item>123</item>
        <item>989</item>
        <item>567</item>
        <item>651</item>
        <item>675</item>
        <item>460 v</item>
    </string-array>
    <string-array name="N3S8">
        <item>81</item>
        <item>85</item>
        <item>57</item>
        <item>78 v</item>
        <item>83</item>
        <item>89</item>
    </string-array>
    <string-array name="N3S9">
        <item>101</item>
        <item>111</item>
        <item>101</item>
        <item>110 v</item>
        <item>011</item>
        <item>101</item>
    </string-array>
    <string-array name="N3S10">
        <item>3455</item>
        <item>7607</item>
        <item>5453</item>
        <item>4799</item>
        <item>9748 v</item>
        <item>3575</item>
    </string-array>
    <string-array name="N3S11">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N3S12">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N4S1">
        <item>9 v</item>
        <item>8</item>
        <item>8</item>
        <item>8</item>
        <item>8</item>
        <item>8</item>
    </string-array>
    <string-array name="N4S2">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>6 v</item>
        <item>5</item>
        <item>5</item>
    </string-array>
    <string-array name="N4S3">
        <item>13</item>
        <item>15</item>
        <item>17</item>
        <item>19</item>
        <item>11</item>
        <item>12 v</item>
    </string-array>
    <string-array name="N4S4">
        <item>62</item>
        <item>88</item>
        <item>76</item>
        <item>73 v</item>
        <item>84</item>
        <item>70</item>
    </string-array>
    <string-array name="N4S5">
        <item>213</item>
        <item>434 v</item>
        <item>387</item>
        <item>659</item>
        <item>871</item>
        <item>435</item>
    </string-array>
    <string-array name="N4S6">
        <item>132</item>
        <item>232</item>
        <item>332</item>
        <item>221 v</item>
        <item>112</item>
        <item>212</item>
    </string-array>
    <string-array name="N4S7">
        <item>444</item>
        <item>444</item>
        <item>444</item>
        <item>444</item>
        <item>444</item>
        <item>474 v</item>
    </string-array>
    <string-array name="N4S8">
        <item>8190 v</item>
        <item>8531</item>
        <item>3465</item>
        <item>6543</item>
        <item>8341</item>
        <item>8967</item>
    </string-array>
    <string-array name="N4S9">
        <item>1101</item>
        <item>0111</item>
        <item>0101</item>
        <item>1100 v</item>
        <item>0111</item>
        <item>1111</item>
    </string-array>
    <string-array name="N4S10">
        <item>3455 v</item>
        <item>3214</item>
        <item>3542</item>
        <item>3102</item>
        <item>5340 v</item>
        <item>3524</item>
    </string-array>
    <string-array name="N4S11">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N4S12">
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>2 v</item>
        <item>3</item>
        <item>3</item>
    </string-array>
    <string-array name="N5S1">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2 v</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string-array name="N5S2">
        <item>5</item>
        <item>4 v</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </string-array>
    <string-array name="N5S3">
        <item>15</item>
        <item>17</item>
        <item>17</item>
        <item>19</item>
        <item>14 v</item>
        <item>11</item>
    </string-array>
    <string-array name="N5S4">
        <item>71</item>
        <item>74 v</item>
        <item>75</item>
        <item>77</item>
        <item>19</item>
        <item>73</item>
    </string-array>
    <string-array name="N5S5">
        <item>21</item>
        <item>43</item>
        <item>38 v</item>
        <item>65</item>
        <item>87</item>
        <item>43</item>
    </string-array>
    <string-array name="N5S6">
        <item>211</item>
        <item>433</item>
        <item>346 v</item>
        <item>459</item>
        <item>657</item>
        <item>875</item>
    </string-array>
    <string-array name="N5S7">
        <item>123</item>
        <item>989</item>
        <item>567</item>
        <item>651</item>
        <item>675</item>
        <item>460 v</item>
    </string-array>
</resources>