<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.droidmedi.medidroid.truechoice.Number"
    tools:showIn="@layout/activity_number">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40">

            <TableLayout
                android:id="@+id/case1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv1"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/case2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv2"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/case3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv3"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="40">

            <TableLayout
                android:id="@+id/case4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv4"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/case5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv5"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/case6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv6"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center">

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
